--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "aclivechat-js",
-  "version": "0.0.0",
+  "name": "aclivechat-node",
+  "version": "0.2.12",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "node-dev ./bin/www"
+    "start": "node app.js",
+    "dev": "node-dev app.js"
   },
   "dependencies": {
-    "ac-danmu": "^0.3.7",
+    "ac-danmu": "0.4.0",
     "connect-history-api-fallback": "^1.6.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-ws": "^4.0.0",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1",
-    "ws": "^7.4.1"
+    "http-errors": "~1.6.3"
+  },
+  "bin": "app.js",
+  "pkg": {
+    "assets": [
+      "public/**/*"
+    ]
   }
 }
