--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "dev": "node-dev app.js"
+    "dev": "node-dev app.js",
+    "pkg-win" :"pkg -t win ."
   },
   "dependencies": {
     "ac-danmu": "^0.4.6",
@@ -12,6 +13,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-fileupload": "^1.2.0",
     "express-ws": "^4.0.0",
     "http-errors": "~1.6.3"
   },
