--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "aclivechat-node",
-  "version": "0.3.5",
+  "version": "0.4.0",
   "private": true,
   "scripts": {
     "start": "node app.js",
     "dev": "node-dev app.js",
-    "pkg-win": "pkg -t win ."
+    "pkg-win": "pkg -t win .",
+    "pkg-publish":" pkg -t win . --output ./ll-aclivechat-latest && scp ll-aclivechat-latest.exe root@139.186.70.87:/data/wwwroot/livesongs.sdrsks.com.cn"
   },
   "dependencies": {
     "ac-danmu": "^0.4.6",
